--- a/resume/latex/resume.tex
+++ b/resume/latex/resume.tex
@@ -46,6 +46,7 @@
     \vspace{4pt}
     \href{https://github.com/lluisvalerodelai}{https://github.com/lluisvalerodelai} $|$
     \href{https://linkedin.com/in/luis-valero-b00896230}{https://linkedin.com/in/luis-valero-b00896230} $|$
+    \href{https://lluisvalerodelai.github.io/website/}{https://lluisvalerodelai.github.io/website/} $|$
 \end{center}
 
 \vspace{-10pt}
