--- a/resume/latex/resume.tex
+++ b/resume/latex/resume.tex
@@ -56,7 +56,7 @@
 
 \educationitem{Bachelor of Science, Data Science \& Artificial Intelligence}{2024 -- 2027}{Leiden University}{GPA: 8.94/10}
 \vspace{2pt}
-\textit{Relevant Coursework:} Reinforcement Learning, Neural Computing, Data Structures \& Algorithms, Databases, Math Structures in CS (topology, manifolds, category theory), High Performance Computing
+\textit{Relevant Coursework:} Reinforcement Learning, Neural Computing, Data Structures \& Algorithms, Databases, Math Structures in CS (topology, manifolds, category theory)
 
 \vspace{4pt}
 
