--- a/resume/latex/resume.tex
+++ b/resume/latex/resume.tex
@@ -69,7 +69,9 @@
 
 \workitem{Teaching Assistant}{Oct 2025 -- Present}{Leiden University}{}
 \begin{itemize}
-    \item Teaching assistant for Data Structures \& Algorithms, Probability Theory for CS, and Fundamentals of Programming
+    \item \textbf{Data Structures \& Algorithms} (Feb 2026 -- Jun 2026, Ongoing)
+    \item \textbf{Probability Theory for Computer Scientists} (Mar 2026 -- Jun 2026, Ongoing)
+    \item \textbf{Fundamentals of Programming} (Oct 2025 -- Jan 2026)
 \end{itemize}
 
 \vspace{2pt}
@@ -106,6 +108,13 @@
 
 \vspace{2pt}
 
+\subsection*{\href{https://github.com/lluisvalerodelai/minispark}{Minispark -- Miniature Apache Spark Clone}}
+\begin{itemize}
+    \item Miniature Apache Spark clone for Raspberry Pi Cluster
+\end{itemize}
+
+\vspace{2pt}
+
 \subsection*{\href{https://github.com/Johk3/AIR}{Cell Segmentation Toolkit}}
 \begin{itemize}
     \item Voice-controlled cell segmentation tool for AI \& Robotics challenge at Leiden University
@@ -124,6 +133,6 @@
 \section*{SKILLS}
 
 \textbf{Languages:} English, Spanish, Catalan (fluent); Finnish, French, Dutch (conversational) \\
-\textbf{Technical:} Python, C, C++, x86 Assembly, Reinforcement Learning, Computer Vision, OS Development
+\textbf{Technical:} Python, C, C++, Scala 3, Data Analysis
 
 \end{document}
