--- a/resume/latex/resume.tex
+++ b/resume/latex/resume.tex
@@ -101,7 +101,7 @@
 
 \subsection*{\href{https://github.com/lluisvalerodelai/START-compiler}{START Compiler -- x86 Compiler}}
 \begin{itemize}
-    \item Open-source x86 compiler for educational programming language START used at Leiden University
+    \item Open-source x86 compiler for educational programming language START used at Leiden University (unofficial)
 \end{itemize}
 
 \vspace{2pt}
